fix if the length the same

--- a/force-app/main/default/classes/SortLinesService.cls
+++ b/force-app/main/default/classes/SortLinesService.cls
@@ -10,18 +10,24 @@ public with sharing class SortLinesService {
   private static List<String> sortString(String text) {
     if (text != null && !String.isEmpty(text)) {
       List<String> lines = text.split('\n');
-      Map<Integer, String> stringMap = new Map<Integer, String>();
+      Map<Integer, List<String>> lengthMap = new Map<Integer, List<String>>();
 
       for (String line : lines) {
-        stringMap.put(line.length(), line);
+        Integer length = line.length();
+        if (!lengthMap.containsKey(length)) {
+          lengthMap.put(length, new List<String>{ line });
+        } else {
+          lengthMap.get(length).add(line);
+        }
       }
 
-      List<Integer> sortedKeys = new List<Integer>(stringMap.keySet());
-      sortedKeys.sort();
       List<String> sortedStrings = new List<String>();
+      List<Integer> sortedKeys = new List<Integer>(lengthMap.keySet());
+      sortedKeys.sort();
 
       for (Integer i = sortedKeys.size() - 1; i >= 0; i--) {
-        sortedStrings.add(stringMap.get(sortedKeys[i]));
+        Integer key = sortedKeys[i];
+        sortedStrings.addAll(lengthMap.get(key));
       }
 
       return sortedStrings;
